Some grammatical changes.

--- a/enviro.html
+++ b/enviro.html
@@ -367,7 +367,7 @@ summary {
 
 <div id="beach-dataset" class="section level3">
 <h3>Beach dataset</h3>
-<p>The beach data set is made available from <a href="https://github.com/rladiessydney/RYouWithMe" class="uri">https://github.com/rladiessydney/RYouWithMe</a> with minimal documentation. You need to make you have installed the package readr.</p>
+<p>The beach data set is made available from <a href="https://github.com/rladiessydney/RYouWithMe">here</a> with minimal documentation. You need to make sure you have installed the package <em>readr</em>.</p>
 <pre class="r"><code>library(readr)
 library(tidyverse)</code></pre>
 <pre><code>## -- Attaching packages -------------------------------------- tidyverse 1.3.0 --</code></pre>
@@ -448,7 +448,7 @@ p1+coord_flip()</code></pre>
 </div>
 <div id="environmental-river-flows" class="section level3">
 <h3>Environmental river flows</h3>
-<p>We are going to investigate the relationship between the Murray River average daily water level in metres (WaterLevel) and daily rainfall in mm at Pinegrove on the Murray River (Rainfall) available in the file <em>PineGrove19Aug19.csv</em>. It is reasonable to assume that the average daily water level is influenced by rainfall. This data covers the time period from 20 August 2018 to 19 August 2019. This data was extracted from <a href="https://riverdata.mdba.gov.au/pinegrove" class="uri">https://riverdata.mdba.gov.au/pinegrove</a> on 20 August 2019. Other locations could be extracted from <a href="https://riverdata.mdba.gov.au/" class="uri">https://riverdata.mdba.gov.au/</a>. Only the most recent year of data can be extracted.</p>
+<p>We are going to investigate the relationship between the Murray River average daily water level in metres (WaterLevel) and daily rainfall in mm at Pinegrove on the Murray River (Rainfall) available in the file <em>PineGrove19Aug19.csv</em>. It is reasonable to assume that the average daily water level is influenced by rainfall. This data covers the time period from 20 August 2018 to 19 August 2019. This data was extracted from <a href="https://riverdata.mdba.gov.au/pinegrove">here</a> on 20 August 2019. Other locations could be extracted from <a href="https://riverdata.mdba.gov.au/">here</a>. Only the most recent year of data can be extracted.</p>
 <pre class="r"><code>library(graphics)
 Pinegrove&lt;-read_csv(&quot;PineGrove19Aug19.csv&quot;)</code></pre>
 <pre><code>## Parsed with column specification:
@@ -490,19 +490,19 @@ pacf(Pinegrove$Rainfall)</code></pre>
 </div>
 <div id="birds-datasets" class="section level3">
 <h3>Birds datasets</h3>
-<p>Various datasets about Austrlian birds are <a href="https://birdata.birdlife.org.au/">here</a>. Simply</p>
+<p>Various datasets about Austrlian birds are <a href="https://birdata.birdlife.org.au/">here</a>.</p>
 </div>
 <div id="atlas-of-living-australia" class="section level3">
 <h3>Atlas of living Australia</h3>
-<p>Search occurrence records in the ALA by species, taxon, dataset, region, date, location, data provider… Access the data <a href="https://www.ala.org.au/">here</a></p>
+<p>Search occurrence records in the ALA by species, taxon, dataset, region, date, location, data provider… Access the data <a href="https://www.ala.org.au/">here</a>.</p>
 </div>
 <div id="bush-fires-data" class="section level3">
 <h3>Bush Fires data</h3>
-<p>Download Near real-time MODIS (C6) and VIIRS (375 m) active fire data. Access the data <a href="https://firms.modaps.eosdis.nasa.gov/active_fire/">here</a></p>
+<p>Download Near real-time MODIS (C6) and VIIRS (375 m) active fire data. Access the data <a href="https://firms.modaps.eosdis.nasa.gov/active_fire/">here</a>.</p>
 </div>
 <div id="bureau-of-meteorology-data" class="section level3">
 <h3>Bureau of Meteorology data</h3>
-<p>The r package <em>bomrang</em> <a href="https://cran.r-project.org/web/packages/bomrang/bomrang.pdf">here</a> has functions that extracts Australian Government Bureau of Meteorology (‘BOM’) data.</p>
+<p>The r package <em>bomrang</em> <a href="https://cran.r-project.org/web/packages/bomrang/bomrang.pdf">here</a> has functions that extract Australian Government Bureau of Meteorology (‘BOM’) data.</p>
 </div>
 <div id="queensland-government-environmental-maps-and-data-online" class="section level3">
 <h3>Queensland Government environmental maps and data online</h3>
